--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   flutter_config: ^2.0.0
   json_serializable: ^6.5.4
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
